# mock_ptr

./: .gitmodules  CMakeLists.txt
headers/: mock_ptr.h
unitTests/: CMakeLists.txt
unitTests/sources/: mock_ptr_tests.cpp
